lab2/lab2.1/Lab2.1/parser.out
Grammar:

Rule 0     S' -> Program
Rule 1     Program -> Decls
Rule 2     Decls -> <empty>
Rule 3     Decls -> Decl Decls
Rule 4     Decl -> VOID IDENTIFIER LEFTROUNDPARENTHESES FormalList RIGHTROUNDPARENTHESES LEFTCURLYBRACKET Stmts RIGHTCURLYBRACKET
Rule 5     Decl -> Type IDENTIFIER LEFTROUNDPARENTHESES FormalList RIGHTROUNDPARENTHESES LEFTCURLYBRACKET Stmts RIGHTCURLYBRACKET
Rule 6     FormalList -> <empty>
Rule 7     FormalList -> Type IDENTIFIER Identifiers
Rule 8     Identifiers -> <empty>
Rule 9     Identifiers -> COMMA Type IDENTIFIER Identifiers
Rule 10    Type -> BOOL
Rule 11    Type -> INT
Rule 12    Stmt -> WHILE LEFTROUNDPARENTHESES Expr RIGHTROUNDPARENTHESES Stmt
Rule 13    Stmt -> IF LEFTROUNDPARENTHESES Expr RIGHTROUNDPARENTHESES Stmt ELSE Stmt
Rule 14    Stmt -> IF LEFTROUNDPARENTHESES Expr RIGHTROUNDPARENTHESES Stmt
Rule 15    Stmt -> RETURN SEMICOLON
Rule 16    Stmt -> RETURN Expr SEMICOLON
Rule 17    Stmt -> Type IDENTIFIER SEMICOLON
Rule 18    Stmt -> Expr SEMICOLON
Rule 19    Stmt -> <empty>
Rule 20    Stmt -> LEFTCURLYBRACKET Stmts RIGHTCURLYBRACKET
Rule 21    Stmts -> <empty>
Rule 22    Stmts -> Stmts Stmt
Rule 23    Expr -> LEFTROUNDPARENTHESES Expr RIGHTROUNDPARENTHESES
Rule 24    Expr -> IDENTIFIER
Rule 25    Expr -> IDENTIFIER LEFTROUNDPARENTHESES ExprList RIGHTROUNDPARENTHESES
Rule 26    Expr -> MINUS Expr  [precedence=nonassoc, level=8]
Rule 27    Expr -> NOT Expr  [precedence=nonassoc, level=8]
Rule 28    Expr -> Expr GREATER Expr  [precedence=left, level=5]
Rule 29    Expr -> Expr LOWER Expr  [precedence=left, level=5]
Rule 30    Expr -> Expr GREATEREQUAL Expr  [precedence=left, level=5]
Rule 31    Expr -> Expr LOWEREQUAL Expr  [precedence=left, level=5]
Rule 32    Expr -> Expr DIFFERENT Expr  [precedence=left, level=4]
Rule 33    Expr -> Expr AND Expr  [precedence=left, level=3]
Rule 34    Expr -> Expr OR Expr  [precedence=left, level=2]
Rule 35    Expr -> Expr EQUALS Expr  [precedence=left, level=4]
Rule 36    Expr -> Expr DIVIDE Expr  [precedence=left, level=7]
Rule 37    Expr -> Expr MULTIPLY Expr  [precedence=left, level=7]
Rule 38    Expr -> Expr MINUS Expr  [precedence=left, level=6]
Rule 39    Expr -> Expr PLUS Expr  [precedence=left, level=6]
Rule 40    Expr -> IDENTIFIER ASSIGN Expr  [precedence=right, level=1]
Rule 41    Expr -> FALSE
Rule 42    Expr -> TRUE
Rule 43    Expr -> NUMBER
Rule 44    ExprList -> <empty>
Rule 45    ExprList -> Expr Expressions
Rule 46    Expressions -> <empty>
Rule 47    Expressions -> COMMA Expr Expressions

Terminals, with rules where they appear:

AND                  : 33
ASSIGN               : 40
BOOL                 : 10
COMMA                : 9 47
DIFFERENT            : 32
DIVIDE               : 36
ELSE                 : 13
EQUALS               : 35
FALSE                : 41
GREATER              : 28
GREATEREQUAL         : 30
IDENTIFIER           : 4 5 7 9 17 24 25 40
IF                   : 13 14
INT                  : 11
LEFTCURLYBRACKET     : 4 5 20
LEFTROUNDPARENTHESES : 4 5 12 13 14 23 25
LOWER                : 29
LOWEREQUAL           : 31
MINUS                : 26 38
MULTIPLY             : 37
NOT                  : 27
NUMBER               : 43
OR                   : 34
PLUS                 : 39
RETURN               : 15 16
RIGHTCURLYBRACKET    : 4 5 20
RIGHTROUNDPARENTHESES : 4 5 12 13 14 23 25
SEMICOLON            : 15 16 17 18
TRUE                 : 42
VOID                 : 4
WHILE                : 12
error                : 

Nonterminals, with rules where they appear:

Decl                 : 3
Decls                : 1 3
Expr                 : 12 13 14 16 18 23 26 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 45 47
ExprList             : 25
Expressions          : 45 47
FormalList           : 4 5
Identifiers          : 7 9
Program              : 0
Stmt                 : 12 13 13 14 22
Stmts                : 4 5 20 22
Type                 : 5 7 9 17


state 0

    (0) S' -> . Program
    (1) Program -> . Decls
    (2) Decls -> .
    (3) Decls -> . Decl Decls
    (4) Decl -> . VOID IDENTIFIER LEFTROUNDPARENTHESES FormalList RIGHTROUNDPARENTHESES LEFTCURLYBRACKET Stmts RIGHTCURLYBRACKET
    (5) Decl -> . Type IDENTIFIER LEFTROUNDPARENTHESES FormalList RIGHTROUNDPARENTHESES LEFTCURLYBRACKET Stmts RIGHTCURLYBRACKET
    (10) Type -> . BOOL
    (11) Type -> . INT
    $end            reduce using rule 2 (Decls -> .)
    VOID            shift and go to state 4
    BOOL            shift and go to state 6
    INT             shift and go to state 7

    Program                        shift and go to state 1
    Decls                          shift and go to state 2
    Decl                           shift and go to state 3
    Type                           shift and go to state 5

state 1

    (0) S' -> Program .


state 2

    (1) Program -> Decls .
    $end            reduce using rule 1 (Program -> Decls .)


state 3

    (3) Decls -> Decl . Decls
    (2) Decls -> .
    (3) Decls -> . Decl Decls
    (4) Decl -> . VOID IDENTIFIER LEFTROUNDPARENTHESES FormalList RIGHTROUNDPARENTHESES LEFTCURLYBRACKET Stmts RIGHTCURLYBRACKET
    (5) Decl -> . Type IDENTIFIER LEFTROUNDPARENTHESES FormalList RIGHTROUNDPARENTHESES LEFTCURLYBRACKET Stmts RIGHTCURLYBRACKET
    (10) Type -> . BOOL
    (11) Type -> . INT
    $end            reduce using rule 2 (Decls -> .)
    VOID            shift and go to state 4
    BOOL            shift and go to state 6
    INT             shift and go to state 7

    Decl                           shift and go to state 3
    Decls                          shift and go to state 8
    Type                           shift and go to state 5

state 4

    (4) Decl -> VOID . IDENTIFIER LEFTROUNDPARENTHESES FormalList RIGHTROUNDPARENTHESES LEFTCURLYBRACKET Stmts RIGHTCURLYBRACKET
    IDENTIFIER      shift and go to state 9


state 5

    (5) Decl -> Type . IDENTIFIER LEFTROUNDPARENTHESES FormalList RIGHTROUNDPARENTHESES LEFTCURLYBRACKET Stmts RIGHTCURLYBRACKET
    IDENTIFIER      shift and go to state 10


state 6

    (10) Type -> BOOL .
    IDENTIFIER      reduce using rule 10 (Type -> BOOL .)


state 7

    (11) Type -> INT .
    IDENTIFIER      reduce using rule 11 (Type -> INT .)


state 8

    (3) Decls -> Decl Decls .
    $end            reduce using rule 3 (Decls -> Decl Decls .)


state 9

    (4) Decl -> VOID IDENTIFIER . LEFTROUNDPARENTHESES FormalList RIGHTROUNDPARENTHESES LEFTCURLYBRACKET Stmts RIGHTCURLYBRACKET
    LEFTROUNDPARENTHESES shift and go to state 11


state 10

    (5) Decl -> Type IDENTIFIER . LEFTROUNDPARENTHESES FormalList RIGHTROUNDPARENTHESES LEFTCURLYBRACKET Stmts RIGHTCURLYBRACKET
    LEFTROUNDPARENTHESES shift and go to state 12


state 11

    (4) Decl -> VOID IDENTIFIER LEFTROUNDPARENTHESES . FormalList RIGHTROUNDPARENTHESES LEFTCURLYBRACKET Stmts RIGHTCURLYBRACKET
    (6) FormalList -> .
    (7) FormalList -> . Type IDENTIFIER Identifiers
    (10) Type -> . BOOL
    (11) Type -> . INT
    RIGHTROUNDPARENTHESES reduce using rule 6 (FormalList -> .)
    BOOL            shift and go to state 6
    INT             shift and go to state 7

    FormalList                     shift and go to state 13
    Type                           shift and go to state 14

state 12

    (5) Decl -> Type IDENTIFIER LEFTROUNDPARENTHESES . FormalList RIGHTROUNDPARENTHESES LEFTCURLYBRACKET Stmts RIGHTCURLYBRACKET
    (6) FormalList -> .
    (7) FormalList -> . Type IDENTIFIER Identifiers
    (10) Type -> . BOOL
    (11) Type -> . INT
    RIGHTROUNDPARENTHESES reduce using rule 6 (FormalList -> .)
    BOOL            shift and go to state 6
    INT             shift and go to state 7

    Type                           shift and go to state 14
    FormalList                     shift and go to state 15

state 13

    (4) Decl -> VOID IDENTIFIER LEFTROUNDPARENTHESES FormalList . RIGHTROUNDPARENTHESES LEFTCURLYBRACKET Stmts RIGHTCURLYBRACKET
    RIGHTROUNDPARENTHESES shift and go to state 16


state 14

    (7) FormalList -> Type . IDENTIFIER Identifiers
    IDENTIFIER      shift and go to state 17


state 15

    (5) Decl -> Type IDENTIFIER LEFTROUNDPARENTHESES FormalList . RIGHTROUNDPARENTHESES LEFTCURLYBRACKET Stmts RIGHTCURLYBRACKET
    RIGHTROUNDPARENTHESES shift and go to state 18


state 16

    (4) Decl -> VOID IDENTIFIER LEFTROUNDPARENTHESES FormalList RIGHTROUNDPARENTHESES . LEFTCURLYBRACKET Stmts RIGHTCURLYBRACKET
    LEFTCURLYBRACKET shift and go to state 19


state 17

    (7) FormalList -> Type IDENTIFIER . Identifiers
    (8) Identifiers -> .
    (9) Identifiers -> . COMMA Type IDENTIFIER Identifiers
    RIGHTROUNDPARENTHESES reduce using rule 8 (Identifiers -> .)
    COMMA           shift and go to state 21

    Identifiers                    shift and go to state 20

state 18

    (5) Decl -> Type IDENTIFIER LEFTROUNDPARENTHESES FormalList RIGHTROUNDPARENTHESES . LEFTCURLYBRACKET Stmts RIGHTCURLYBRACKET
    LEFTCURLYBRACKET shift and go to state 22


state 19

    (4) Decl -> VOID IDENTIFIER LEFTROUNDPARENTHESES FormalList RIGHTROUNDPARENTHESES LEFTCURLYBRACKET . Stmts RIGHTCURLYBRACKET
    (21) Stmts -> .
    (22) Stmts -> . Stmts Stmt
    RIGHTCURLYBRACKET reduce using rule 21 (Stmts -> .)
    WHILE           reduce using rule 21 (Stmts -> .)
    IF              reduce using rule 21 (Stmts -> .)
    RETURN          reduce using rule 21 (Stmts -> .)
    LEFTCURLYBRACKET reduce using rule 21 (Stmts -> .)
    BOOL            reduce using rule 21 (Stmts -> .)
    INT             reduce using rule 21 (Stmts -> .)
    LEFTROUNDPARENTHESES reduce using rule 21 (Stmts -> .)
    IDENTIFIER      reduce using rule 21 (Stmts -> .)
    MINUS           reduce using rule 21 (Stmts -> .)
    NOT             reduce using rule 21 (Stmts -> .)
    FALSE           reduce using rule 21 (Stmts -> .)
    TRUE            reduce using rule 21 (Stmts -> .)
    NUMBER          reduce using rule 21 (Stmts -> .)

    Stmts                          shift and go to state 23

state 20

    (7) FormalList -> Type IDENTIFIER Identifiers .
    RIGHTROUNDPARENTHESES reduce using rule 7 (FormalList -> Type IDENTIFIER Identifiers .)


state 21

    (9) Identifiers -> COMMA . Type IDENTIFIER Identifiers
    (10) Type -> . BOOL
    (11) Type -> . INT
    BOOL            shift and go to state 6
    INT             shift and go to state 7

    Type                           shift and go to state 24

state 22

    (5) Decl -> Type IDENTIFIER LEFTROUNDPARENTHESES FormalList RIGHTROUNDPARENTHESES LEFTCURLYBRACKET . Stmts RIGHTCURLYBRACKET
    (21) Stmts -> .
    (22) Stmts -> . Stmts Stmt
    RIGHTCURLYBRACKET reduce using rule 21 (Stmts -> .)
    WHILE           reduce using rule 21 (Stmts -> .)
    IF              reduce using rule 21 (Stmts -> .)
    RETURN          reduce using rule 21 (Stmts -> .)
    LEFTCURLYBRACKET reduce using rule 21 (Stmts -> .)
    BOOL            reduce using rule 21 (Stmts -> .)
    INT             reduce using rule 21 (Stmts -> .)
    LEFTROUNDPARENTHESES reduce using rule 21 (Stmts -> .)
    IDENTIFIER      reduce using rule 21 (Stmts -> .)
    MINUS           reduce using rule 21 (Stmts -> .)
    NOT             reduce using rule 21 (Stmts -> .)
    FALSE           reduce using rule 21 (Stmts -> .)
    TRUE            reduce using rule 21 (Stmts -> .)
    NUMBER          reduce using rule 21 (Stmts -> .)

    Stmts                          shift and go to state 25

state 23

    (4) Decl -> VOID IDENTIFIER LEFTROUNDPARENTHESES FormalList RIGHTROUNDPARENTHESES LEFTCURLYBRACKET Stmts . RIGHTCURLYBRACKET
    (22) Stmts -> Stmts . Stmt
    (12) Stmt -> . WHILE LEFTROUNDPARENTHESES Expr RIGHTROUNDPARENTHESES Stmt
    (13) Stmt -> . IF LEFTROUNDPARENTHESES Expr RIGHTROUNDPARENTHESES Stmt ELSE Stmt
    (14) Stmt -> . IF LEFTROUNDPARENTHESES Expr RIGHTROUNDPARENTHESES Stmt
    (15) Stmt -> . RETURN SEMICOLON
    (16) Stmt -> . RETURN Expr SEMICOLON
    (17) Stmt -> . Type IDENTIFIER SEMICOLON
    (18) Stmt -> . Expr SEMICOLON
    (19) Stmt -> .
    (20) Stmt -> . LEFTCURLYBRACKET Stmts RIGHTCURLYBRACKET
    (10) Type -> . BOOL
    (11) Type -> . INT
    (23) Expr -> . LEFTROUNDPARENTHESES Expr RIGHTROUNDPARENTHESES
    (24) Expr -> . IDENTIFIER
    (25) Expr -> . IDENTIFIER LEFTROUNDPARENTHESES ExprList RIGHTROUNDPARENTHESES
    (26) Expr -> . MINUS Expr
    (27) Expr -> . NOT Expr
    (28) Expr -> . Expr GREATER Expr
    (29) Expr -> . Expr LOWER Expr
    (30) Expr -> . Expr GREATEREQUAL Expr
    (31) Expr -> . Expr LOWEREQUAL Expr
    (32) Expr -> . Expr DIFFERENT Expr
    (33) Expr -> . Expr AND Expr
    (34) Expr -> . Expr OR Expr
    (35) Expr -> . Expr EQUALS Expr
    (36) Expr -> . Expr DIVIDE Expr
    (37) Expr -> . Expr MULTIPLY Expr
    (38) Expr -> . Expr MINUS Expr
    (39) Expr -> . Expr PLUS Expr
    (40) Expr -> . IDENTIFIER ASSIGN Expr
    (41) Expr -> . FALSE
    (42) Expr -> . TRUE
    (43) Expr -> . NUMBER
  ! shift/reduce conflict for RIGHTCURLYBRACKET resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for LEFTCURLYBRACKET resolved as shift
  ! shift/reduce conflict for BOOL resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for LEFTROUNDPARENTHESES resolved as shift
  ! shift/reduce conflict for IDENTIFIER resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for NOT resolved as shift
  ! shift/reduce conflict for FALSE resolved as shift
  ! shift/reduce conflict for TRUE resolved as shift
  ! shift/reduce conflict for NUMBER resolved as shift
    RIGHTCURLYBRACKET shift and go to state 29
    WHILE           shift and go to state 31
    IF              shift and go to state 33
    RETURN          shift and go to state 34
    LEFTCURLYBRACKET shift and go to state 28
    BOOL            shift and go to state 6
    INT             shift and go to state 7
    LEFTROUNDPARENTHESES shift and go to state 27
    IDENTIFIER      shift and go to state 26
    MINUS           shift and go to state 36
    NOT             shift and go to state 37
    FALSE           shift and go to state 38
    TRUE            shift and go to state 39
    NUMBER          shift and go to state 40

    Stmt                           shift and go to state 30
    Expr                           shift and go to state 32
    Type                           shift and go to state 35

state 24

    (9) Identifiers -> COMMA Type . IDENTIFIER Identifiers
    IDENTIFIER      shift and go to state 41


state 25

    (5) Decl -> Type IDENTIFIER LEFTROUNDPARENTHESES FormalList RIGHTROUNDPARENTHESES LEFTCURLYBRACKET Stmts . RIGHTCURLYBRACKET
    (22) Stmts -> Stmts . Stmt
    (12) Stmt -> . WHILE LEFTROUNDPARENTHESES Expr RIGHTROUNDPARENTHESES Stmt
    (13) Stmt -> . IF LEFTROUNDPARENTHESES Expr RIGHTROUNDPARENTHESES Stmt ELSE Stmt
    (14) Stmt -> . IF LEFTROUNDPARENTHESES Expr RIGHTROUNDPARENTHESES Stmt
    (15) Stmt -> . RETURN SEMICOLON
    (16) Stmt -> . RETURN Expr SEMICOLON
    (17) Stmt -> . Type IDENTIFIER SEMICOLON
    (18) Stmt -> . Expr SEMICOLON
    (19) Stmt -> .
    (20) Stmt -> . LEFTCURLYBRACKET Stmts RIGHTCURLYBRACKET
    (10) Type -> . BOOL
    (11) Type -> . INT
    (23) Expr -> . LEFTROUNDPARENTHESES Expr RIGHTROUNDPARENTHESES
    (24) Expr -> . IDENTIFIER
    (25) Expr -> . IDENTIFIER LEFTROUNDPARENTHESES ExprList RIGHTROUNDPARENTHESES
    (26) Expr -> . MINUS Expr
    (27) Expr -> . NOT Expr
    (28) Expr -> . Expr GREATER Expr
    (29) Expr -> . Expr LOWER Expr
    (30) Expr -> . Expr GREATEREQUAL Expr
    (31) Expr -> . Expr LOWEREQUAL Expr
    (32) Expr -> . Expr DIFFERENT Expr
    (33) Expr -> . Expr AND Expr
    (34) Expr -> . Expr OR Expr
    (35) Expr -> . Expr EQUALS Expr
    (36) Expr -> . Expr DIVIDE Expr
    (37) Expr -> . Expr MULTIPLY Expr
    (38) Expr -> . Expr MINUS Expr
    (39) Expr -> . Expr PLUS Expr
    (40) Expr -> . IDENTIFIER ASSIGN Expr
    (41) Expr -> . FALSE
    (42) Expr -> . TRUE
    (43) Expr -> . NUMBER
  ! shift/reduce conflict for RIGHTCURLYBRACKET resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for LEFTCURLYBRACKET resolved as shift
  ! shift/reduce conflict for BOOL resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for LEFTROUNDPARENTHESES resolved as shift
  ! shift/reduce conflict for IDENTIFIER resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for NOT resolved as shift
  ! shift/reduce conflict for FALSE resolved as shift
  ! shift/reduce conflict for TRUE resolved as shift
  ! shift/reduce conflict for NUMBER resolved as shift
    RIGHTCURLYBRACKET shift and go to state 42
    WHILE           shift and go to state 31
    IF              shift and go to state 33
    RETURN          shift and go to state 34
    LEFTCURLYBRACKET shift and go to state 28
    BOOL            shift and go to state 6
    INT             shift and go to state 7
    LEFTROUNDPARENTHESES shift and go to state 27
    IDENTIFIER      shift and go to state 26
    MINUS           shift and go to state 36
    NOT             shift and go to state 37
    FALSE           shift and go to state 38
    TRUE            shift and go to state 39
    NUMBER          shift and go to state 40

    Type                           shift and go to state 35
    Stmt                           shift and go to state 30
    Expr                           shift and go to state 32

state 26

    (24) Expr -> IDENTIFIER .
    (25) Expr -> IDENTIFIER . LEFTROUNDPARENTHESES ExprList RIGHTROUNDPARENTHESES
    (40) Expr -> IDENTIFIER . ASSIGN Expr
    SEMICOLON       reduce using rule 24 (Expr -> IDENTIFIER .)
    GREATER         reduce using rule 24 (Expr -> IDENTIFIER .)
    LOWER           reduce using rule 24 (Expr -> IDENTIFIER .)
    GREATEREQUAL    reduce using rule 24 (Expr -> IDENTIFIER .)
    LOWEREQUAL      reduce using rule 24 (Expr -> IDENTIFIER .)
    DIFFERENT       reduce using rule 24 (Expr -> IDENTIFIER .)
    AND             reduce using rule 24 (Expr -> IDENTIFIER .)
    OR              reduce using rule 24 (Expr -> IDENTIFIER .)
    EQUALS          reduce using rule 24 (Expr -> IDENTIFIER .)
    DIVIDE          reduce using rule 24 (Expr -> IDENTIFIER .)
    MULTIPLY        reduce using rule 24 (Expr -> IDENTIFIER .)
    MINUS           reduce using rule 24 (Expr -> IDENTIFIER .)
    PLUS            reduce using rule 24 (Expr -> IDENTIFIER .)
    RIGHTROUNDPARENTHESES reduce using rule 24 (Expr -> IDENTIFIER .)
    COMMA           reduce using rule 24 (Expr -> IDENTIFIER .)
    LEFTROUNDPARENTHESES shift and go to state 43
    ASSIGN          shift and go to state 44


state 27

    (23) Expr -> LEFTROUNDPARENTHESES . Expr RIGHTROUNDPARENTHESES
    (23) Expr -> . LEFTROUNDPARENTHESES Expr RIGHTROUNDPARENTHESES
    (24) Expr -> . IDENTIFIER
    (25) Expr -> . IDENTIFIER LEFTROUNDPARENTHESES ExprList RIGHTROUNDPARENTHESES
    (26) Expr -> . MINUS Expr
    (27) Expr -> . NOT Expr
    (28) Expr -> . Expr GREATER Expr
    (29) Expr -> . Expr LOWER Expr
    (30) Expr -> . Expr GREATEREQUAL Expr
    (31) Expr -> . Expr LOWEREQUAL Expr
    (32) Expr -> . Expr DIFFERENT Expr
    (33) Expr -> . Expr AND Expr
    (34) Expr -> . Expr OR Expr
    (35) Expr -> . Expr EQUALS Expr
    (36) Expr -> . Expr DIVIDE Expr
    (37) Expr -> . Expr MULTIPLY Expr
    (38) Expr -> . Expr MINUS Expr
    (39) Expr -> . Expr PLUS Expr
    (40) Expr -> . IDENTIFIER ASSIGN Expr
    (41) Expr -> . FALSE
    (42) Expr -> . TRUE
    (43) Expr -> . NUMBER
    LEFTROUNDPARENTHESES shift and go to state 27
    IDENTIFIER      shift and go to state 26
    MINUS           shift and go to state 36
    NOT             shift and go to state 37
    FALSE           shift and go to state 38
    TRUE            shift and go to state 39
    NUMBER          shift and go to state 40

    Expr                           shift and go to state 45

state 28

    (20) Stmt -> LEFTCURLYBRACKET . Stmts RIGHTCURLYBRACKET
    (21) Stmts -> .
    (22) Stmts -> . Stmts Stmt
    RIGHTCURLYBRACKET reduce using rule 21 (Stmts -> .)
    WHILE           reduce using rule 21 (Stmts -> .)
    IF              reduce using rule 21 (Stmts -> .)
    RETURN          reduce using rule 21 (Stmts -> .)
    LEFTCURLYBRACKET reduce using rule 21 (Stmts -> .)
    BOOL            reduce using rule 21 (Stmts -> .)
    INT             reduce using rule 21 (Stmts -> .)
    LEFTROUNDPARENTHESES reduce using rule 21 (Stmts -> .)
    IDENTIFIER      reduce using rule 21 (Stmts -> .)
    MINUS           reduce using rule 21 (Stmts -> .)
    NOT             reduce using rule 21 (Stmts -> .)
    FALSE           reduce using rule 21 (Stmts -> .)
    TRUE            reduce using rule 21 (Stmts -> .)
    NUMBER          reduce using rule 21 (Stmts -> .)

    Stmts                          shift and go to state 46

state 29

    (4) Decl -> VOID IDENTIFIER LEFTROUNDPARENTHESES FormalList RIGHTROUNDPARENTHESES LEFTCURLYBRACKET Stmts RIGHTCURLYBRACKET .
    VOID            reduce using rule 4 (Decl -> VOID IDENTIFIER LEFTROUNDPARENTHESES FormalList RIGHTROUNDPARENTHESES LEFTCURLYBRACKET Stmts RIGHTCURLYBRACKET .)
    BOOL            reduce using rule 4 (Decl -> VOID IDENTIFIER LEFTROUNDPARENTHESES FormalList RIGHTROUNDPARENTHESES LEFTCURLYBRACKET Stmts RIGHTCURLYBRACKET .)
    INT             reduce using rule 4 (Decl -> VOID IDENTIFIER LEFTROUNDPARENTHESES FormalList RIGHTROUNDPARENTHESES LEFTCURLYBRACKET Stmts RIGHTCURLYBRACKET .)
    $end            reduce using rule 4 (Decl -> VOID IDENTIFIER LEFTROUNDPARENTHESES FormalList RIGHTROUNDPARENTHESES LEFTCURLYBRACKET Stmts RIGHTCURLYBRACKET .)


state 30

    (22) Stmts -> Stmts Stmt .
    RIGHTCURLYBRACKET reduce using rule 22 (Stmts -> Stmts Stmt .)
    WHILE           reduce using rule 22 (Stmts -> Stmts Stmt .)
    IF              reduce using rule 22 (Stmts -> Stmts Stmt .)
    RETURN          reduce using rule 22 (Stmts -> Stmts Stmt .)
    LEFTCURLYBRACKET reduce using rule 22 (Stmts -> Stmts Stmt .)
    BOOL            reduce using rule 22 (Stmts -> Stmts Stmt .)
    INT             reduce using rule 22 (Stmts -> Stmts Stmt .)
    LEFTROUNDPARENTHESES reduce using rule 22 (Stmts -> Stmts Stmt .)
    IDENTIFIER      reduce using rule 22 (Stmts -> Stmts Stmt .)
    MINUS           reduce using rule 22 (Stmts -> Stmts Stmt .)
    NOT             reduce using rule 22 (Stmts -> Stmts Stmt .)
    FALSE           reduce using rule 22 (Stmts -> Stmts Stmt .)
    TRUE            reduce using rule 22 (Stmts -> Stmts Stmt .)
    NUMBER          reduce using rule 22 (Stmts -> Stmts Stmt .)


state 31

    (12) Stmt -> WHILE . LEFTROUNDPARENTHESES Expr RIGHTROUNDPARENTHESES Stmt
    LEFTROUNDPARENTHESES shift and go to state 47


state 32

    (18) Stmt -> Expr . SEMICOLON
    (28) Expr -> Expr . GREATER Expr
    (29) Expr -> Expr . LOWER Expr
    (30) Expr -> Expr . GREATEREQUAL Expr
    (31) Expr -> Expr . LOWEREQUAL Expr
    (32) Expr -> Expr . DIFFERENT Expr
    (33) Expr -> Expr . AND Expr
    (34) Expr -> Expr . OR Expr
    (35) Expr -> Expr . EQUALS Expr
    (36) Expr -> Expr . DIVIDE Expr
    (37) Expr -> Expr . MULTIPLY Expr
    (38) Expr -> Expr . MINUS Expr
    (39) Expr -> Expr . PLUS Expr
    SEMICOLON       shift and go to state 48
    GREATER         shift and go to state 49
    LOWER           shift and go to state 50
    GREATEREQUAL    shift and go to state 51
    LOWEREQUAL      shift and go to state 52
    DIFFERENT       shift and go to state 53
    AND             shift and go to state 54
    OR              shift and go to state 55
    EQUALS          shift and go to state 56
    DIVIDE          shift and go to state 57
    MULTIPLY        shift and go to state 58
    MINUS           shift and go to state 59
    PLUS            shift and go to state 60


state 33

    (13) Stmt -> IF . LEFTROUNDPARENTHESES Expr RIGHTROUNDPARENTHESES Stmt ELSE Stmt
    (14) Stmt -> IF . LEFTROUNDPARENTHESES Expr RIGHTROUNDPARENTHESES Stmt
    LEFTROUNDPARENTHESES shift and go to state 61


state 34

    (15) Stmt -> RETURN . SEMICOLON
    (16) Stmt -> RETURN . Expr SEMICOLON
    (23) Expr -> . LEFTROUNDPARENTHESES Expr RIGHTROUNDPARENTHESES
    (24) Expr -> . IDENTIFIER
    (25) Expr -> . IDENTIFIER LEFTROUNDPARENTHESES ExprList RIGHTROUNDPARENTHESES
    (26) Expr -> . MINUS Expr
    (27) Expr -> . NOT Expr
    (28) Expr -> . Expr GREATER Expr
    (29) Expr -> . Expr LOWER Expr
    (30) Expr -> . Expr GREATEREQUAL Expr
    (31) Expr -> . Expr LOWEREQUAL Expr
    (32) Expr -> . Expr DIFFERENT Expr
    (33) Expr -> . Expr AND Expr
    (34) Expr -> . Expr OR Expr
    (35) Expr -> . Expr EQUALS Expr
    (36) Expr -> . Expr DIVIDE Expr
    (37) Expr -> . Expr MULTIPLY Expr
    (38) Expr -> . Expr MINUS Expr
    (39) Expr -> . Expr PLUS Expr
    (40) Expr -> . IDENTIFIER ASSIGN Expr
    (41) Expr -> . FALSE
    (42) Expr -> . TRUE
    (43) Expr -> . NUMBER
    SEMICOLON       shift and go to state 62
    LEFTROUNDPARENTHESES shift and go to state 27
    IDENTIFIER      shift and go to state 26
    MINUS           shift and go to state 36
    NOT             shift and go to state 37
    FALSE           shift and go to state 38
    TRUE            shift and go to state 39
    NUMBER          shift and go to state 40

    Expr                           shift and go to state 63

state 35

    (17) Stmt -> Type . IDENTIFIER SEMICOLON
    IDENTIFIER      shift and go to state 64


state 36

    (26) Expr -> MINUS . Expr
    (23) Expr -> . LEFTROUNDPARENTHESES Expr RIGHTROUNDPARENTHESES
    (24) Expr -> . IDENTIFIER
    (25) Expr -> . IDENTIFIER LEFTROUNDPARENTHESES ExprList RIGHTROUNDPARENTHESES
    (26) Expr -> . MINUS Expr
    (27) Expr -> . NOT Expr
    (28) Expr -> . Expr GREATER Expr
    (29) Expr -> . Expr LOWER Expr
    (30) Expr -> . Expr GREATEREQUAL Expr
    (31) Expr -> . Expr LOWEREQUAL Expr
    (32) Expr -> . Expr DIFFERENT Expr
    (33) Expr -> . Expr AND Expr
    (34) Expr -> . Expr OR Expr
    (35) Expr -> . Expr EQUALS Expr
    (36) Expr -> . Expr DIVIDE Expr
    (37) Expr -> . Expr MULTIPLY Expr
    (38) Expr -> . Expr MINUS Expr
    (39) Expr -> . Expr PLUS Expr
    (40) Expr -> . IDENTIFIER ASSIGN Expr
    (41) Expr -> . FALSE
    (42) Expr -> . TRUE
    (43) Expr -> . NUMBER
    LEFTROUNDPARENTHESES shift and go to state 27
    IDENTIFIER      shift and go to state 26
    MINUS           shift and go to state 36
    NOT             shift and go to state 37
    FALSE           shift and go to state 38
    TRUE            shift and go to state 39
    NUMBER          shift and go to state 40

    Expr                           shift and go to state 65

state 37
